# AUTONOMOUS-NAVIGATION-FOR-ROSBOT2-PRO

./: README.md
custom_rosbot_nav/src/global_motion/: CMakeLists.txt  package.xml
custom_rosbot_nav/src/global_motion/include/global_motion/: global_motion_node.hpp
custom_rosbot_nav/src/obstacle_avoidance_pkg/: obstacle_avoidance_node.py  package.xml  setup.cfg
docker/: .env  compose.yaml
rosbot_slam_ws/src/rosbot_slam/maps/: mapa1.pgm  mapa1.yaml  mapademo.yaml  mapapasillo2.pgm  mapapasillo2.yaml  mapapasillo3.yaml  mapasotano.pgm  mapasotano.yaml
src/global_motion/src/: global_motion_node.cpp
src/obstacle_avoidance_pkg/: setup.py
src/obstacle_avoidance_pkg/obstacle_avoidance_pkg/: obstacle_avoidance_node.py
src/rosbot_slam/: CMakeLists.txt  package.xml
src/rosbot_slam/config/: amcl.yaml  slam.yaml
src/rosbot_slam/launch/: amcl.launch.py  slam.launch.py
src/rosbot_slam/maps/: mapademo.pgm
