<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_slam</name>
  <version>0.0.0</version>
  <description>ROSbot SLAM launch package</description>

  <maintainer email="husarion@todo.todo">husarion</maintainer>
  <license>TODO</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- SLAM -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Common messages -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- TF -->
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
